# Tarea2SO

./: CMakeLists.txt  Client  Dockerfile  README.md  Server
Sockets/: Client.c  ImagesList.c  ImagesList.h  Server.c  config.conf
Sockets/Algorithm/: equalization.c  equalization.h  image_handler.c  image_handler.h  stb_image_write.h
